--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .menu{
     display: flex;
     justify-content: space-around;
-    background-color: rgb(255, 165, 0);
+    background-color: #FFA500;
     padding: 15px;
     font-size: 20px;
     font-family: sans-serif;
